# mailoptDemo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
mailopt/: data.py
mailopt/Deterministic/: DetMCModelClass.py  ModelChecks.py  StochMCModelClass.py
mailopt/Graphing/: GraphDrawing.py
mailopt/NetworkBuilding/: AdvancedNetworkBuilding.py  CreateSmallInstance.py  NetworkBuildingFunction.py  ScenarioGeneration.py
mailopt/Optimising/: CCMSGModelOptFunction.py  CalcKPIs.py
scripts/: Demo_Script.py
